fixed big card spacing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -80,6 +80,10 @@
   }
 }
 
+.card-user {
+  padding: 12px 12px;
+}
+
 .card-purple {
   margin-left: 32px;
   background: rgb(168,51,185);
@@ -89,7 +93,7 @@
 }
 
 .card-side {
-  height: 100vh;
+  height: 70vh;
   margin-top: 120px;
   margin-left: 16px;
   position: relative;
@@ -101,7 +105,7 @@
   }
 
   p {
-    width: 250px;
+    width: 100%;
     top: 110px;
     min-width: 100px;
     word-wrap: break-word;
