--- a/app/assets/stylesheets/components/_position.scss
+++ b/app/assets/stylesheets/components/_position.scss
@@ -1,5 +1,7 @@
 .position-middle {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  // position: absolute;
+  // left: 50%;
+  // transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
 }
